src/views/KanbanBoardView.css
/* Copyright (c) 2019 Shellyl_N and Authors
 * license: ISC
 * https://github.com/shellyln
 */


div.KanbanBoardView-content {
    height: 100%;
    flex-grow: 1;
    color: var(--main-text-color);
    background-color: var(--main-bg-color);
}
table.KanbanBoardView-board {
    width: calc(100% - 30px);
    height: 100%;
    margin: 15px;
    border: solid 1px var(--main-text-color);
    border-collapse: collapse;
}
table.KanbanBoardView-board thead th {
    position: sticky;
    top: 0;
    z-index: 2;
}
table.KanbanBoardView-board thead th a {
    color: inherit;
    text-decoration: none;
}
table.KanbanBoardView-board th:first-child {
    position: sticky;
    left: 0;
    z-index: 1;
}
table.KanbanBoardView-board th {
    border: solid 1px var(--main-text-color);
    border-collapse: collapse;
    padding: 5px;
}
table.KanbanBoardView-board td {
    border: solid 1px var(--main-text-color);
    border-collapse: collapse;
    padding: 5px;
    vertical-align: top;
}
.KanbanBoardView-sticky-wrap {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;
    width: 100%;
    height: 100%;
}
.KanbanBoardView-sticky-note {
    position: relative;
    display: block;
    background-color: var(--sticky-yellow-color);
    filter: drop-shadow(5px 5px 2px var(--sticky-shadow-color));
    width: 150px;
    min-height: 80px;
    height: auto;
    margin: 5px;
    padding: 5px;
    word-wrap: break-word;
}
.KanbanBoardView-sticky-tags {
    margin: 2px;
    padding: 0px;
    font-size: 85%;
    line-height: 1.6em;
}
.KanbanBoardView-sticky-tags li {
    display: inline;
    list-style-type: none;
    margin-right: 5px;
    padding: 2px;
    border-radius: 4px;
    color: var(--sticky-tag-text-color);
    background-color: var(--sticky-tag-bg-color);
}
.KanbanBoardView-sticky-barcode {
    margin: 15px 5px;
}
.KanbanBoardView-sticky-link {
    display: block;
}
.KanbanBoardView-sticky-link .KanbanBoardView-sticky-note:hover {
    filter: drop-shadow(7px 7px 2px var(--sticky-shadow-color));
    transform: rotate(-3deg);
}
table.KanbanBoardView-board .KanbanBoardView-sticky-note.expired {
    /* NOTE: this selector should be longer than "per-board customized styles" */
    background-color: var(--sticky-red-color);
}
.KanbanBoardView-sticky-note {
    font-size: 0.85rem;
}
.KanbanBoardView-sticky-description h1 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.95rem;
}
.KanbanBoardView-sticky-description h2 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.925rem;
}
.KanbanBoardView-sticky-description h3 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.9rem;
}
.KanbanBoardView-sticky-description h4 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.875rem;
}
.KanbanBoardView-sticky-description h5 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.875rem;
}
.KanbanBoardView-sticky-description h6 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.85rem;
}
.KanbanBoardView-sticky-description p {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.85rem;
}
.KanbanBoardView-sticky-description a {
    color: var(--main-text-color);
}
.KanbanBoardView-sticky-description img {
    max-width: 100%;
}
.KanbanBoardView-sticky-description ul {
    padding-inline-start: 1em;
    margin-inline-start: 0em;
    margin-block-start: inherit;
    margin-block-end: inherit;
}
.KanbanBoardView-sticky-wrap a.KanbanBoardView-sticky-link {
    color: inherit;
    text-decoration: none;
}
.KanbanBoardView-sticky-wrap a.KanbanBoardView-sticky-link:hover {
    cursor: pointer;
}
.KanbanBoardView-sticky-note .marked {
    position: absolute;
    top: 0px;
    right: 0px;
    font-size: 95%;
}
.KanbanBoardView-sticky-note .due-date {
    position: absolute;
    bottom: 0px;
    right: 0px;
    font-size: 70%;
}
.KanbanBoardView-sticky-note.expired .due-date {
    color: red;
    font-weight: bold;
}
table.KanbanBoardView-board thead th:nth-of-type(1) {
    width: 1px;
}
.KanbanBoardView-board-note-wrap {
    font-size: 0.85rem;
}
.KanbanBoardView-board-note {
    margin: 10px auto;
    width: 95%;
}
.KanbanBoardView-board-note h1 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.95rem;
}
.KanbanBoardView-board-note h2 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.925rem;
}
.KanbanBoardView-board-note h3 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.9rem;
}
.KanbanBoardView-board-note h4 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.875rem;
}
.KanbanBoardView-board-note h5 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.875rem;
}
.KanbanBoardView-board-note h6 {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.85rem;
}
.KanbanBoardView-board-note p {
    margin-block-start: 2px;
    margin-block-end: 2px;
    font-size: 0.85rem;
}
.KanbanBoardView-board-note a {
    color: var(--main-text-color);
}
.KanbanBoardView-board-note img {
    max-width: 100%;
}
.KanbanBoardView-board-note ul {
    padding-inline-start: 1em;
    margin-inline-start: 0em;
    margin-block-start: inherit;
    margin-block-end: inherit;
}

